rev_02_week_02_day_01_homework

--- a/week_02/week_02_day_01_homework/week_02_day_01_homework.Rmd
+++ b/week_02/week_02_day_01_homework/week_02_day_01_homework.Rmd
@@ -52,7 +52,7 @@ full_join(fraud_base, transaction_base, by = "transaction_id")
 # Qu. 4 ----
 
 ```{r}
-inner_join(card_base, transaction_base, by = c("card_number" = "credit_card_id"))
+semi_join(card_base, transaction_base, by = c("card_number" = "credit_card_id"))
 ```
 
 # Qu. 5 & 6 ----
