--- a/week_11/day_03/text_mining_lab.Rmd
+++ b/week_11/day_03/text_mining_lab.Rmd
@@ -35,6 +35,12 @@ wordcloud(
   rot.per = 0.35,
   colors=brewer.pal(8, "Dark2")
 )
+
+ggwordcloud(
+  words = little_mermaid$word,
+  freq = little_mermaid$n,
+  min.freq = 10
+)
 ```
 
 # MVP 2
@@ -164,3 +170,9 @@ thumbelina_df %>%
   ) +
   theme_bw()
 ```
+
+```{r}
+library(text2vec)
+glimpse(movie_review)
+```
+
